# Deckest

./: .gitignore  .gitmodules  DB.dia  README.md  UML.dia  UML.mdj  UNLICENSE  deckest.db  env.sh  meson.build  msys2.sh  run.sh
include/: creation_callbacks.hpp  db.hpp  estimator.hpp  util.hpp
src/: creation_callbacks.hpp  db.cpp  db.hpp  decks.cpp  employees.cpp  estimator.cpp  estimator_ui.cpp  main.cpp  materials.cpp  util.cpp
ui/: decks.glade  differences.glade  estimator.glade  main.glade  materials.glade
